# MNIST-Project

./: .gitignore  MNIST project by Himesh Maniyar.ipynb  MNIST_model.keras  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
MNIST_epic_number_reader.model/: saved_model.pb
MNIST_epic_number_reader.model/variables/: variables.data-00000-of-00001  variables.index
